# VisualVoice

./: .gitignore  README.md  dockerfile  pyproject.toml  testRealVideo.py
collection/: collect_samples.py  filter_samples.py
data/: audioVisual_dataset.py
scripts/: m2ts2mp4.sh  merge.sh  preprocess_all.sh  preprocess_all_2spks.sh  preprocess_nspks.sh  separate.sh
test_videos/interview/filename_input/: interview.csv
test_videos/interview/landmark/: speaker1.npz  speaker2.npz
test_videos/interview/mouthroi/: speaker1.npz  speaker2.npz
utils/: detectFaces.py
